--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client Portal - Tysun Mike Pro</title>
     <link rel="stylesheet" href="/css/elite.css">
+    <link rel="stylesheet" href="/css/elite-animations.css">
     <script src="/js/portal.js" defer></script>
+    <script src="/js/elite-interactions.js" defer></script>
 </head>
 <body>
     <header class="main-header">
