--- a/views/signup.html
+++ b/views/signup.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up - Tysun Mike Productions</title>
   <link rel="stylesheet" href="/css/portal.css">
+  <link rel="stylesheet" href="/css/elite-animations.css">
   <link rel="stylesheet" href="/css/chatbot.css">
   <style>
     .auth-container { max-width: 450px; margin: 80px auto; }
@@ -195,6 +196,7 @@
   </div>
   
   <script src="/js/chatbot.js"></script>
+  <script src="/js/elite-interactions.js" defer></script>
 </body>
 </html>
 
